--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Subir HTML como artifact
         uses: actions/upload-artifact@v4
         with:
-          name: newman-html-report
-          path: newman-report.html
+          name: report
+          path: report.html
 
       - name: Ver logs del servidor si falla
         if: failure()
