--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -35,13 +35,13 @@ jobs:
 
       - name: Run Postman Collection
         run: |
-          newman run ./postman/my-collection.json  --environment ./postman/my-environment.json  --reporters cli,htmlextra  --reporter-htmlextra-export report.html   
+          newman run ./postman/my-collection.json  --environment ./postman/my-environment.json  --reporters cli,htmlextra  --reporter-htmlextra-export report-test.html   
 
       - name: Subir HTML como artifact
         uses: actions/upload-artifact@v4
         with:
           name: report
-          path: report.html
+          path: report-test.html
 
       - name: Ver logs del servidor si falla
         if: failure()
